CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-12 21:33:22
+lastsearch = 2024-07-12 22:35:54
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/gcam-para-samsung-a12-2024
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTXOoJ-y&sig=ACfU3U0riSCx3PDOG3tTIlKxsnDjh0BLCA&hl=en&sa=X&ved=2ahUKEwiEhe6c2KGHAxU3FzQIHYgvD3AQ6AF6BAgmEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTXOtH0C&sig=ACfU3U1QVNidk7TYQeo20jQOs1qzq_MZ3Q&hl=en&sa=X&ved=2ahUKEwif382U6qGHAxWP48kDHWS4BZgQ6AF6BAgeEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -52,9 +52,9 @@ title = Màn hình LCD 1602 - Linhkienthanhcong.vn
 url = https://linhkienthanhcong.com/lcd1602-5v
 
 [shop.nagakawa.com.vn]
-match = -57.7%%
-title = Máy hút mùi cao cấp Nagakawa NKKH01M70 - Bảo hành ...
-url = https://shop.nagakawa.com.vn/may-hut-mui-cao-cap-nagakawa-nkkh01m70.html
+match = -42.3%%
+title = Bộ 3 nồi inox 4 đáy Nagakawa NAG1306 (16cm, 20cm ...
+url = https://shop.nagakawa.com.vn/bo-3-noi-inox-4-day-nagakawa-nag1306-16cm-20cm-24cm-quai-vang.html
 
 [giaiphapchung.vn]
 match = 20.0%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260?l=vietnamese&snr=2_9_100006_100202_apphubheader
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=34646864
 
 [vi.wikipedia.org]
 match = -3.8%%
@@ -162,9 +162,9 @@ title = Đại Lễ Phật Đản - Ý nghĩa của nghi lễ tắm Phật
 url = https://www.tanhkhong.org/p1185a1901/4/dd0210-nhu-chieu-
 
 [enews.agu.edu.vn]
-match = -53.8%%
-title = “Sóc Sờ Bai Sóc Trăng” – bài hát đậm chất dân ca Nam Bộ
-url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=19718&Itemid=126
+match = -3.8%%
+title = Xuân chiến khu – cố nhạc sĩ Xuân Hồng
+url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=18151&Itemid=126
 
 [watv.org]
 match = -76.9%%
