--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-12 17:43:57
+lastsearch = 2024-07-12 22:32:19
 
 [shopee.vn]
 match = -81.8%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ..
 url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [www.facebook.com]
-match = 36.4%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = -4.5%%
+title = Phòng Khám Nhi Tâm An | Thai Binh
+url = https://www.facebook.com/phongkhamnhitamandonghung/?locale=he_IL
 
 [m.facebook.com]
 match = -36.4%%
@@ -82,9 +82,9 @@ title = Chiếu Nhựa Thái Lan Cỡ Đại Con Hươu 3m x 1,8m 6/1
 url = https://truonganmart.vn/chieu-trai-nen-con-huou-3-5-x-2m/7731
 
 [www.youtube.com]
-match = -95.5%%
-title = Hát Chèo Thái Bình Đặc Sắc Đón Xuân 2023- Quê Hương ...
-url = https://www.youtube.com/watch?v=34JhKS5E8Rs
+match = -86.4%%
+title = CAO THÁI SƠN | BÌNH YÊN NHÉ | OFFICIAL MUSIC VIDEO
+url = https://www.youtube.com/watch?v=dWTsP1qPh7w
 
 [thegioithangnhom.com.vn]
 match = -27.3%%
@@ -105,4 +105,39 @@ url = https://chieu.com.vn/chieu-coi/chieu-coi-thai-binh
 match = 0.0%%
 title = 3M | Phim cách nhiệt cao cấp
 url = https://truc.com.vn/3m-phim-cach-nhiet-cao-cap.html
+
+[soxaydung.thaibinh.gov.vn]
+match = -4.5%%
+title = UBND TINH THAI BINH sU XAY DUNG s6
+url = https://soxaydung.thaibinh.gov.vn/upload/80612/20240415/Cong_bo_gia_VLXD_thang_3_2024_7e0d7.pdf
+
+[amchamvietnam.chambermaster.com]
+match = -4.5%%
+title = Membership Directory Search
+url = http://amchamvietnam.chambermaster.com/list/search?sa=true
+
+[www.quora.com]
+match = -118.2%%
+title = Was the French occupation of Vietnam worse compared to ...
+url = https://www.quora.com/Was-the-French-occupation-of-Vietnam-worse-compared-to-the-Japanese-occupation-of-Korea
+
+[vatlieuxaydung.org.vn]
+match = -104.5%%
+title = Thai BInh, ngàyA 5iáng 11 nám 2023 CONGBO Giá vt 1iu ...
+url = https://vatlieuxaydung.org.vn/Upload/48/Nam_2023/Gia VLXD/Gia VLXD thai binh thang 10 nam 2023.pdf
+
+[www.yellowpages.com.vn]
+match = -4.5%%
+title = garments manufacturing company
+url = https://www.yellowpages.com.vn/tagclass/30112370/garments-manufacturing-company.html
+
+[nhadat24h.net]
+match = -104.5%%
+title = Chủ gấp bán giảm 1.5 tỷ - ngay chợ thạch đà, gò vấp - 64m2
+url = https://nhadat24h.net/ban-nha-trong-ngo-tren-3m-pham-van-chieu/chu-gap-ban-giam-1-5-ty-ngay-cho-thach-da-go-vap-64m2-thang-may-450kg-ID4087145
+
+[kinhtexaydung.gov.vn]
+match = -157.1%%
+title = CONG BO
+url = https://kinhtexaydung.gov.vn/wp-content/uploads/2020/12/CV_1064-CBG-T6-2020.pdf
 
