--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-12 21:53:23
+lastsearch = 2024-07-12 22:28:54
 
 [demxanh.com]
 match = -3.3%%
@@ -68,7 +68,7 @@ url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
-title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
+title = Bảng giá chiếu mây điều hòa 2024 | Nekio Việt Nam
 url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 
 [chiaki.vn]
