--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-12 22:16:58
+lastsearch = 2024-07-12 22:30:25
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = CGV Cinemas Vietnam - Sau 4 ngày công ...
 url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
 match = -19.0%%
