CI images update

--- a/images/nem-dreamland-uc-150x190x09/config.ini
+++ b/images/nem-dreamland-uc-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-150x190x09.html
 lastopen = 2024-06-06 16:44:38
 
 [search]
-lastsearch = 2024-07-12 21:47:44
+lastsearch = 2024-07-12 22:49:50
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -50,4 +50,19 @@ url = https://www.avsforum.com/threads/i-converted-my-spandex-screen-to-a-vinyl-
 match = -92.6%%
 title = X-Plane 11 | Magknight 787-9 v1.1 | The 787-9 Down Under ...
 url = https://m.youtube.com/watch?v=6Usm_fhKZiI
+
+[www.dreamlandresort.com]
+match = -61.5%%
+title = The real TR-3
+url = https://www.dreamlandresort.com/forum/messages/59327.html
+
+[www.youtube.com]
+match = -63.0%%
+title = NorCal Regionals 11: UMVC3 EG Justin Wong Vs. 949 ...
+url = https://www.youtube.com/watch?v=Tnphg2N3RM4
+
+[www.airliners.net]
+match = -55.6%%
+title = European Multirole MPA Replacement, C-500 Beagle ...
+url = https://www.airliners.net/forum/viewtopic.php?t=1450275&start=50
 
