--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-12 22:31:32
+lastsearch = 2024-07-12 22:46:24
 
 [www.instagram.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
 url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.youtube.com]
 match = -161.1%%
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = -166.7%%
-title = Nem Nướng Cô Lê - 16B ngõ 3 Ao Sen (35~70k) #tiktokfood ...
-url = https://www.tiktok.com/@eatwithmynoreo/video/7132782326672592155?lang=en
+match = 5.6%%
+title = Monaco Long Hair Guy
+url = https://www.tiktok.com/discover/monaco-long-hair-guy
 
 [thuvienphapluat.vn]
 match = -133.3%%
