--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-12 21:50:19
+lastsearch = 2024-07-12 22:49:28
 
 [demxanh.com]
 match = -41.2%%
@@ -12,19 +12,19 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -141.2%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+match = -105.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
 
 [www.lazada.vn]
-match = -152.9%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -135.3%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -129.4%%
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [sammas.vn]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
 url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
-match = -200.0%%
-title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
-url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
+match = -235.3%%
+title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
+url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
 
 [vn.my-best.com]
 match = -176.5%%
