--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-12 14:49:41
+lastsearch = 2024-07-12 23:24:04
 
 [xoptraisan.info]
-match = -64.7%%
-title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
-url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
+match = -141.2%%
+title = Thảm nỉ ghép Tường Lâm 30x30 cao cấp chính hãng giá ...
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-30x30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title = Keo xịt dán xốp dán tường, giấy, thảm nỉ, thảm simili, 
 url = https://ahamart.com.vn/keo-xit-dan-xop-dan-tuong-giay-tham-ni-tham-simili-vai-go-mut-cach-am-yuan-feng-sponge-spray-adhesive-pj77-600ml-p39099706.html
 
 [chuyenhangviet.com]
-match = -82.4%%
-title = Thảm nỉ ghép cao cấp Tường Lâm mọi kích thước
-url = https://chuyenhangviet.com/tham-ni-ghep-cao-cap-tuong-lam/
+match = -182.4%%
+title = Thảm nỉ ghép không răng đế cao su thương hiệu Âu Lạc Việt ...
+url = https://chuyenhangviet.com/tham-ni-de-cao-su-au-lac/
 
 [www.innhatkhang.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -135.3%%
-title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
-url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
+match = -47.1%%
+title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
+url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
 
 [thamtraisan.info]
 match = -76.5%%
