--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-12 22:34:41
+lastsearch = 2024-07-12 23:18:54
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -190,4 +190,9 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 match = -48.1%%
 title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
+
+[metruyen.me]
+match = 33.3%%
+title = Vợ Ơi, Anh Yêu Em - Chương 3
+url = https://metruyen.me/truyen/vo-oi-anh-yeu-em/chuong-3
 
