--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-12 17:40:58
+lastsearch = 2024-07-12 23:20:25
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -171.4%%
-title = YouTube
-url = https://www.youtube.com/watch?v=m_ctPZV3RNo
+match = -114.3%%
+title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
+url = https://www.youtube.com/watch?v=St3S4ilkoIY
 
 [liontrip.vn]
 match = -81.0%%
