--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-12 22:32:40
+lastsearch = 2024-07-12 23:19:05
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -200.0%%
+title = 60 Giây Chiều - Ngày 10/07/2024 - HTV Tin Tức Mới Nhất 2024
+url = https://www.youtube.com/watch?v=dDKjXOYrC0Y
 
 [hawater.com.vn]
 match = -75.0%%
@@ -57,9 +57,9 @@ title = Con lắc đơn gồm sợi dây có chiều dài 1,63 m và quả cầu
 url = https://tuyensinh247.com/bai-tap-618536.html
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
-url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
+match = -212.5%%
+title = Top điện thoại chơi game tốt, mượt nhất 2024 từ 4 đến 20 ...
+url = https://www.thegioididong.com/game-app/top-20-dien-thoai-choi-game-tot-nhat-2021-ban-nen-mua-1321221
 
 [vnexpress.net]
 match = -131.2%%
