--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-12 15:35:52
+lastsearch = 2024-07-12 23:22:27
 
 [www.youtube.com]
-match = 33.3%%
-title = Rainman14
-url = https://www.youtube.com/@Rainman14
+match = -330.0%%
+title = Hands Off My Yandere! - 14 Days With You DAY 2 Demo
+url = https://www.youtube.com/watch?v=52d9dTSCRaI
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -40.0%%
-title = 14dwy ren on Tumblr
-url = https://www.tumblr.com/tagged/14dwy ren
+match = -70.0%%
+title = 14 days with you ren
+url = https://www.tumblr.com/tagged/14 days with you ren
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -164,7 +164,7 @@ url = https://www.instagram.com/ren.el.king/?hl=en
 [www.researchgate.net]
 match = 0.0%%
 title = 
-url = https://www.researchgate.net/figure/Locations-of-Acupoints-CV14-Juque-on-the-anterior-meridian-line-of-the-upper_fig3_346516472
+url = https://www.researchgate.net/figure/The-five-Shu-points-of-the-12-meridians_tbl3_263665806
 
 [gretel-lane.myshopify.com]
 match = -120.0%%
