--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-12 15:36:06
+lastsearch = 2024-07-12 23:16:47
 
 [demtot.com]
-match = -44.4%%
-title = Đệm Lò Xo
-url = https://demtot.com/dem-lo-xo/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
