--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-12 20:35:04
+lastsearch = 2024-07-12 23:21:22
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 14
 url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
-match = -65.0%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -100.0%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [noithatami.com]
 match = -75.0%%
@@ -67,9 +67,9 @@ title = Giường điện đa chức năng tập đứng DCN-14
 url = https://giuongbenh.com/giuong-dien-da-chuc-nang-tap-dung-dcn-14
 
 [tiki.vn]
-match = -50.0%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+match = -115.0%%
+title = Thảm lông trải giường 1m x 2m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm+lông+trải+giường+1m+x+2m
 
 [noithattamviet.net]
 match = -10.0%%
