--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-12 23:17:09
+lastsearch = 2024-07-12 23:38:51
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -54.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [everon.online]
 match = -8.3%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = -37.5%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+match = -66.7%%
+title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
@@ -42,9 +42,9 @@ title = Tầm lót, làm mềm nệm Topper Everon - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/tam-lot-lam-mem-nem-topper-everon-chinh-hang-mem-mai
 
 [thegioichanra.com]
-match = -33.3%%
-title = Tấm Lót Đệm, Tấm Làm Mềm Đệm, Topper Everon Dày 7 cm
-url = https://thegioichanra.com/san-pham/tam-lot-dem-tam-lam-mem-dem-topper-everon-day-7-cm/
+match = -8.3%%
+title = Tấm Lót Đệm, Topper Memory Foam AVIV Everon
+url = https://thegioichanra.com/san-pham/tam-lot-dem-topper-memory-foam-aviv-everon/
 
 [noithatnhatbao.com]
 match = 62.5%%
