CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-12 20:45:38
+lastsearch = 2024-07-12 23:45:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -510,4 +510,9 @@ url = https://stockbiz.vn/tin-tuc/tiep-tuc-dua-ra-cac-chinh-sach-phu-hop-cho-pha
 match = -66.7%%
 title = Yêu Thương Làm Não Bộ Khỏe Mạnh Và Sống Thọ
 url = https://vietbao.com/a319517/yeu-thuong-lam-nao-bo-khoe-manh-va-song-tho
+
+[caobangtv.vn]
+match = -95.2%%
+title = Ghi nhận 126 trận động đất có độ lớn từ 2,5 đến 4,1 độ
+url = http://caobangtv.vn/tin-tuc-n74895/ghi-nhan-126-tran-dong-dat-co-do-lon-tu-25-den-41-do.html
 
