--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-12 23:22:49
+lastsearch = 2024-07-12 23:52:56
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 26.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -30.4%%
+title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
+url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
 
 [www.sendo.vn]
 match = -69.6%%
@@ -37,9 +37,9 @@ title = Sản xuất theo chiều hướng hiện đại, quy mô lớn
 url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-mo-lon
 
 [www.lazada.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-binh-chieu-trai-an-com-gap-gon-du-kich-thuoc-i2342474423.html
+match = -60.9%%
+title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [chuyenhangviet.com]
 match = -73.9%%
