--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-12 20:22:06
+lastsearch = 2024-07-12 23:46:56
 
 [www.galottery.com]
 match = -7.7%%
@@ -12,9 +12,9 @@ title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
-match = -223.1%%
-title = Ayu Gani 🐘 (@ganegani) • Instagram photos and videos
-url = https://www.instagram.com/ganegani/?hl=en
+match = -53.8%%
+title = 𝐔𝐬𝐦𝐚𝐧 𝐆𝐚𝐧𝐢 (@theusman.gani)
+url = https://www.instagram.com/theusman.gani/
 
 [www.homedepot.com]
 match = -200.0%%
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -230.8%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -215.4%%
+title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=UBbUr4PkwO4
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
@@ -77,9 +77,9 @@ title = Thanks, Gani | Tayo the little bus Wiki - Fandom
 url = https://tayothelittlebus.fandom.com/wiki/Thanks,_Gani
 
 [shopee.vn]
-match = -107.7%%
-title = Ga trải giường chống thấm - Ga nilon
-url = https://shopee.vn/Ga-trải-giường-chống-thấm-Ga-nilon-i.217889635.7434783405
+match = -84.6%%
+title = Ga giường nilon | Shopee Việt Nam
+url = https://shopee.vn/Ga-giường-nilon-i.12566078.1390032806
 
 [14henriettastreet.ie]
 match = -223.1%%
