--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-12 17:49:11
+lastsearch = 2024-07-12 23:52:14
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
-match = -190.9%%
-title = Giường 1,8mx2m hàng chính hãng, giao nhanh
+match = -254.5%%
+title = Giường 1,8mx2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
