--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-12 23:39:46
+lastsearch = 2024-07-12 23:46:11
 
 [dongagroup.vn]
 match = -272.7%%
@@ -62,9 +62,9 @@ title = Giường bọc nệm HELEN 2
 url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
 
 [shopee.vn]
-match = -263.6%%
-title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/1m2
+match = -327.3%%
+title = Kệ Gỗ Đầu Giường Kệ 2 Tầng Đa Năng Trang Trí Nhà Cửa ...
+url = https://shopee.vn/Kệ-Gỗ-Đầu-Giường-Kệ-2-Tầng-Đa-Năng-Trang-Trí-Nhà-Cửa-Phong-Cách-Hiện-Đại-MN-65-i.414104565.22942150984
 
 [3dwarehouse.sketchup.com]
 match = -136.4%%
@@ -92,9 +92,9 @@ title = Giường 1m2 x 2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
-url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
+match = -272.7%%
+title = Có bán Ga & khăn trải giường tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/bedspreads-quilts/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -117,9 +117,9 @@ title = Wgm yura legendado [OZVilB]
 url = https://www.nitrc.org/links/?group_id=51&url=https://detsad147vrn.ru/27146399zfe43a
 
 [www.airbnb.com.vn]
-match = -300.0%%
-title = Phòng Superior 2 giường đôi tại Millennium Minneapolis
-url = https://www.airbnb.com.vn/hotels/1059440961797975038
+match = -245.5%%
+title = Giường Queen | Phòng tắm riêng |Roku TV - Airbnb
+url = https://www.airbnb.com.vn/rooms/1184189834133814370
 
 [vn.trip.com]
 match = -254.5%%
