CI images update

--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-12 13:39:11
+lastsearch = 2024-07-13 00:14:54
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = 5.6%%
-title = Vietnamese cuisine
-url = https://en.wikipedia.org/wiki/Vietnamese_cuisine
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = 15.0%%
-title = Chăn ga gối đệm Hà Nội
-url = https://www.facebook.com/demgiare.net/posts/bán-ruột-đệm-bông-ép-cứng-ruột-đệm-mút-giá-rẻhttpdemgiarenetban-ruot-bong-ep-cun/642059146147067/
+match = -160.0%%
+title = West Point Department of History - CPT Makonen Campbell asks ...
+url = https://www.facebook.com/photo.php?fbid=2240494186000553&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -122,9 +122,9 @@ title = Termos de Serviço
 url = https://www.riotgames.com/pt-br/terms-of-service-BR
 
 [cryptoslate.com]
-match = -165.0%%
-title = AI (Artificial Intelligence) Cryptos, Tokens, Coins and Assets
-url = https://cryptoslate.com/cryptos/ai/
+match = -70.0%%
+title = Real Estate Coins, Tokens, Cryptos & Assets
+url = https://cryptoslate.com/cryptos/real-estate/
 
 [wildrift.leagueoflegends.com]
 match = -35.0%%
@@ -305,4 +305,9 @@ url = https://koreanyoumaynotknow.quora.com/Why-do-네-yes-and-뭐-what-sound-li
 match = -70.0%%
 title = Enterprise
 url = https://forkast.news/topic/enterprise/
+
+[synapse.koreamed.org]
+match = -6.2%%
+title = Original Article
+url = https://synapse.koreamed.org/articles/1119644
 
