--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-12 23:24:04
+lastsearch = 2024-07-13 00:19:43
 
 [xoptraisan.info]
-match = -141.2%%
-title = Thảm nỉ ghép Tường Lâm 30x30 cao cấp chính hãng giá ...
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-30x30
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -85,4 +85,9 @@ url = https://www.ssga.com/us/en/intermediary/etfs/funds/spdr-sp-oil-gas-explora
 match = -94.1%%
 title = [HCM]thảm xốp trải sàn - thảm ghép trải sàn
 url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html
+
+[tiki.vn]
+match = -88.2%%
+title = Thảm xốp gấp gọn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp gấp gọn
 
