--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-12 22:37:04
+lastsearch = 2024-07-13 00:15:26
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -172.2%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
+url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Vỏ gối ES1801 45x65
-url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
+match = -5.6%%
+title = Vỏ gối EP1823 BEARS 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1823-bears-45x65.html
 
 [www.everonqb.com]
 match = -38.9%%
@@ -60,4 +60,9 @@ url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
 match = -44.4%%
 title = Specs for an old Bear Polar Recurve
 url = https://www.archerytalk.com/threads/specs-for-an-old-bear-polar-recurve.2238485/
+
+[www.instagram.com]
+match = -150.0%%
+title = peach honey bear 🍑🍯🧸 | starry night 찬이🐺🌌 teddy ver or ...
+url = https://www.instagram.com/peachhoneybear/p/C56l4vsS49D/
 
