--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-12 23:46:00
+lastsearch = 2024-07-13 00:14:10
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+match = 3.8%%
+title = Bộ Chăn Ga Everon ESM21013
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [everon.online]
-match = 38.2%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon EPM-22063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22063.html
 
 [demxanh.com]
 match = 30.6%%
