--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-12 21:49:46
+lastsearch = 2024-07-13 00:14:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
 url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
-match = -4.2%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T03/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+match = 20.8%%
+title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
 match = 41.7%%
@@ -110,4 +110,9 @@ url = https://mungchup.com/mung-chup-tu-bung-dinh-vuong-2m2-x-2m-82721.html
 match = 31.6%%
 title = Màn bung vuông 2,2m
 url = http://mantuyn.vn/man-bung-vuong-22m-49.html
+
+[baobinhdinh.vn]
+match = -16.7%%
+title = Nhiều dự án giao thông lớn chậm tiến độ
+url = https://baobinhdinh.vn/viewer.aspx?macm=24&macmp=24&mabb=280057
 
