--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-12 22:47:10
+lastsearch = 2024-07-13 00:19:23
 
 [www.linkedin.com]
 match = -172.7%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
-url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
+match = -90.9%%
+title = Khách Sạn Anh Minh Tam Đảo
+url = https://www.facebook.com/khachsan.anhminh.tamdao/
 
 [www.hoteljob.vn]
 match = -327.3%%
