--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-12 23:16:02
+lastsearch = 2024-07-13 00:12:53
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = -233.3%%
@@ -167,9 +167,9 @@ title = Tour giant TUI expects bright summer | REUTERS
 url = https://www.youtube.com/watch?v=cToNcnSxFgs
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
 match = -225.0%%
