CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-12 19:25:41
+lastsearch = 2024-07-13 00:38:48
 
 [www.youtube.com]
 match = -110.0%%
@@ -12,9 +12,9 @@ title = KÊNH VTC16
 url = https://www.youtube.com/channel/UCZnhEIF8a5Uv4GMPwT6KafQ
 
 [www.voatiengviet.com]
-match = -68.0%%
-title = Đài Loan bắt giữ 8 người Việt Nam là lao động bỏ trốn
-url = https://www.voatiengviet.com/a/dai-loan-bat-giu-8-nguoi-viet-nam-la-lao-dong-bo-tron/7677699.html
+match = -92.0%%
+title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
+url = https://www.voatiengviet.com/a/7026996.html
 
 [daithuy.com]
 match = -92.0%%
@@ -42,9 +42,9 @@ title = Doanh nhân Đài Loan bất ngờ qua đời khi muốn rút tài sản
 url = https://trithucvn.co/trung-quoc/doanh-nhan-dai-loan-bat-ngo-qua-doi-khi-muon-rut-tai-san-khoi-trung-quoc.html
 
 [books.google.com]
-match = -68.0%%
-title = Tôn Giáo Học So Sánh - Page ii - Google Books Result
-url = https://books.google.com/books?id=FMfKEAAAQBAJ&pg=PR2-IA16&lpg=PR2-IA16&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=NSuZNi6nes&sig=ACfU3U180Ykd47xKbSmUtwVbbjBJ28HoYw&hl=en&sa=X&ved=2ahUKEwiVrLK_-qCHAxUnv4kEHUs8AawQ6AF6BAgVEAM
+match = -92.0%%
+title = Đại doàn kết - Issues 9-29 - Page 23 - Google Books Result
+url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA5-PA23&lpg=RA5-PA23&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=fHS1RUSule&sig=ACfU3U1OH90s0veo-fpPmHggqMZtF2oyHA&hl=en&sa=X&ved=2ahUKEwjy8tXQhaKHAxXQFlkFHbRBCcUQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
