--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-12 23:41:48
+lastsearch = 2024-07-13 00:34:28
 
 [everon.online]
 match = -7.4%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -59.3%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) ...
-url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
+match = -37.0%%
+title = Bộ Chăn Ga Everon Est-21036 chất liệu Gỗ tổng ...
+url = https://everonvn.com.vn/everon/2117/bo-everon-est-21036
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -65,4 +65,9 @@ url = https://www.fountainpennetwork.com/forum/topic/334946-modern-pens-with-ebo
 match = 100.0%%
 title = Bộ bốn mùa EPM21069 180x200
 url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
+
+[www.tenkarabum.com]
+match = 11.1%%
+title = Nissin Zerosum Tenkara Rods
+url = https://www.tenkarabum.com/nissin-zerosum-tenkara-rods.html
 
