--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-12 18:11:38
+lastsearch = 2024-07-13 00:33:05
 
 [sieuthidemonline.vn]
-match = -19.0%%
-title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -105,4 +105,9 @@ url = https://demre.com.vn/dem-lo-xo-techwood
 match = -76.2%%
 title = Mua bán đệm lò xò Techwood giá rẻ giảm tới 60%% tại Hà Nội
 url = https://nemgiasi.net/san-pham/dem-lo-xo-techwood/
+
+[demgiare.vn]
+match = -66.7%%
+title = Đệm Lò Xo chính hãng Giá rẻ - Hà Nội - ĐỆM GIÁ RẺ
+url = https://demgiare.vn/dem-lo-xo.html?subcats=Y&features_hash=V1.V94.V87.V84.V89
 
