--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-12 23:18:02
+lastsearch = 2024-07-13 00:36:52
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -27,9 +27,9 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -81.8%%
-title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/dem-giuong-don
+match = -86.4%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
 match = -45.5%%
@@ -85,4 +85,9 @@ url = https://vikicare.com/tham-da-nhiet-nong-han-quoc-cham-soc-ca-nhan/
 match = -86.4%%
 title = Kích thước giường ngủ chuẩn phổ biến ở Việt Nam và ...
 url = https://www.linkedin.com/pulse/kích-thước-giường-ngủ-chuẩn-phổ-biến-ở-việt-nam-và-quốc-lury
+
+[www.tripadvisor.com]
+match = -45.5%%
+title = 120cm bed for 2 people? - Japan Forum
+url = https://www.tripadvisor.com/ShowTopic-g294232-i525-k6854499-120cm_bed_for_2_people-Japan.html
 
