CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-12 22:35:54
+lastsearch = 2024-07-13 01:24:04
 
 [everon.online]
 match = 19.2%%
@@ -127,9 +127,9 @@ title = Bảng giá bán lẻ chăn bốn mùa Everon
 url = https://everonvn.com.vn/51/chan-bon-mua-everon
 
 [www.youtube.com]
-match = -84.6%%
-title = 🔴[TRỰC TIẾP] Thời sự 24h cập nhật trưa 16/2- Tin nóng Thế ...
-url = https://www.youtube.com/watch?v=Rcdul4P9uZ4
+match = -69.2%%
+title = Bài ca bốn mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
+url = https://www.youtube.com/watch?v=IAxENR2TG3k
 
 [www.thegioididong.com]
 match = -11.5%%
