--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-12 22:48:55
+lastsearch = 2024-07-13 01:24:51
 
 [www.diepxuan.com]
 match = 45.8%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường Bode 160x200
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.tripadvisor.com]
-match = -87.5%%
-title = Hard Mattress! - Review of JK Living Apartment, Na ...
-url = https://www.tripadvisor.com/ShowUserReviews-g26655328-d9594436-r475706948-JK_Living_Apartment-Na_Mueang_Chachoengsao_Province.html
+match = -25.0%%
+title = Hard Rock Hotel & Casino Punta Cana
+url = https://www.tripadvisor.com/LocationPhotoDirectLink-g3176298-d1076311-i295132790-Hard_Rock_Hotel_Casino_Punta_Cana-Bavaro_Punta_Cana_La_Altagracia_Provi.html
 
 [m.facebook.com]
 match = -104.2%%
