--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-12 17:33:36
+lastsearch = 2024-07-13 01:17:15
 
 [demxanh.com]
 match = 30.4%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-KT-160-180-200X220cm-i.334752746.9233812040
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [chuyenhangviet.com]
 match = -43.5%%
