--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-12 23:19:50
+lastsearch = 2024-07-13 01:21:03
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -105.9%%
-title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP5&lpg=RA69-PP5&dq=man+in+hoa+dep+16&source=bl&ots=kbdlnc5_mQ&sig=ACfU3U1zxq2tl4DxleUbQ2VyB8psa837_A&hl=en&sa=X&ved=2ahUKEwil7M_986GHAxU4BzQIHbmXCWkQ6AF6BAgiEAM
+match = -123.5%%
+title = The army list - Page 463 - Google Books Result
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67rlPRQG&sig=ACfU3U2kCzRnYmTySSYpxXCQJOT65Zoh6w&hl=en&sa=X&ved=2ahUKEwiAjsyJj6KHAxVCKlkFHSCYAg4Q6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
