CI images update

--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-12 21:44:56
+lastsearch = 2024-07-13 01:38:43
 
 [www.thanhthuyhanh.com]
 match = 78.6%%
@@ -27,9 +27,9 @@ title = Ruột Gối Everon Các Loại, Giá Bán Rẻ Nhất Tại Hà Nội
 url = https://everonhanquoc.vn/1024/ruot-goi-everon
 
 [changagoidemsonghong.online]
-match = -142.9%%
-title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
-url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
+match = 42.9%%
+title = Ruột gối Sông Hồng
+url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
 
 [demxanh.com]
 match = -150.0%%
