--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-12 20:00:14
+lastsearch = 2024-07-13 01:43:38
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [daros.com.vn]
 match = -40.0%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -193.3%%
-title = FENIX HT30R White Laser 1500m Thrower Lightsaber ...
-url = https://www.youtube.com/watch?v=8tzesdShrhs
+match = -233.3%%
+title = HT Guitar Center.vn | Review Guitar Trần TA-15 và THD-15 ...
+url = https://www.youtube.com/watch?v=H0lnawkpZ-8
 
 [htlight.vn]
 match = -26.7%%
