--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-12 23:33:11
+lastsearch = 2024-07-13 01:49:10
 
 [www.zillow.com]
 match = -69.2%%
@@ -159,7 +159,7 @@ url = https://www.mariettaga.gov/1503/Power-Water
 [www.kff.org]
 match = -192.3%%
 title = Status of State Medicaid Expansion Decisions
-url = https://www.kff.org/medicaid/issue-brief/status-of-state-medicaid-expansion-decisions-interactive-map/
+url = https://www.kff.org/affordable-care-act/issue-brief/status-of-state-medicaid-expansion-decisions-interactive-map/
 
 [www.weather.gov]
 match = -53.8%%
@@ -435,4 +435,19 @@ url = https://dol.georgia.gov/interstate-claims
 match = -50.0%%
 title = Programs
 url = https://pplfirst.com/programs/
+
+[fightingirish.com]
+match = -76.9%%
+title = Official Men's Lacrosse Roster
+url = https://fightingirish.com/sports/mlax/roster/
+
+[www.justice.gov]
+match = -330.8%%
+title = Department of Justice | Homepage | United States Department ...
+url = https://www.justice.gov/
+
+[www.gatesfoundation.org]
+match = -7.7%%
+title = Committed Grants
+url = https://www.gatesfoundation.org/about/committed-grants
 
