--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-12 23:50:30
+lastsearch = 2024-07-13 01:47:14
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -141.2%%
+title = The HOA hates this man. : r/suspiciouslyspecific
+url = https://www.reddit.com/r/suspiciouslyspecific/comments/rn50gb/the_hoa_hates_this_man/
 
 [www.quora.com]
 match = -176.5%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -170.6%%
-title = Identifying harassment in your HOA and what can be done ...
-url = https://www.youtube.com/watch?v=9QiKMQdcOMw
+match = -147.1%%
+title = NEIGHBOR BUILT HOUSES ON MY LAND! HOA Karen Sold ...
+url = https://www.youtube.com/watch?v=LX-CzJVTKzk
 
 [www.gsa.gov]
 match = -44.4%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -105.9%%
-title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdlmc92lU&sig=ACfU3U1rQTklD1ST160clP0dJbrL9vw20w&hl=en&sa=X&ved=2ahUKEwisrN_oj5-HAxUc78kDHX6zA88Q6AF6BAggEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+18&source=bl&ots=2illWvsX0I&sig=ACfU3U1vEl55MeQ5qfVgySF77Cqgqhd5Ag&hl=en&sa=X&ved=2ahUKEwiYp8L2lKKHAxVUEVkFHUPNAMkQ6AF6BAgXEAM
 
 [www.bankrate.com]
 match = 0.0%%
