--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-12 23:46:11
+lastsearch = 2024-07-13 01:53:59
 
 [dongagroup.vn]
 match = -272.7%%
@@ -62,9 +62,9 @@ title = Giường bọc nệm HELEN 2
 url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
 
 [shopee.vn]
-match = -327.3%%
-title = Kệ Gỗ Đầu Giường Kệ 2 Tầng Đa Năng Trang Trí Nhà Cửa ...
-url = https://shopee.vn/Kệ-Gỗ-Đầu-Giường-Kệ-2-Tầng-Đa-Năng-Trang-Trí-Nhà-Cửa-Phong-Cách-Hiện-Đại-MN-65-i.414104565.22942150984
+match = -263.6%%
+title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường/1m2
 
 [3dwarehouse.sketchup.com]
 match = -136.4%%
@@ -92,9 +92,9 @@ title = Giường 1m2 x 2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -272.7%%
-title = Có bán Ga & khăn trải giường tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/bedspreads-quilts/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
+url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
