--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-13 00:15:15
+lastsearch = 2024-07-13 01:53:50
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -22,9 +22,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = 4.2%%
-title = Shopping in Seoul, Korea
-url = https://www.youtube.com/playlist?list=PL57y3Ds0TP-TdVWc672z5QnhQ1RaOdZ4P
+match = -92.0%%
+title = Why North Korea’s dumping garbage on South Korea | About ...
+url = https://www.youtube.com/watch?v=SU3JMXEUtgg
 
 [www.bbc.co.uk]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://www.britannica.com/place/Seoul
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Riot_Games
+url = https://en.wikipedia.org/wiki/Joseon
 
 [rusticpathways.com]
 match = 0.0%%
