--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-12 21:51:02
+lastsearch = 2024-07-13 02:10:25
 
 [quizlet.com]
 match = -170.0%%
@@ -225,4 +225,9 @@ url = https://www.entertainmentearth.com/product/ren-and-stimpy-ren-16inch-hugme
 match = -250.0%%
 title = Ren Amamiya | Megami Tensei Wiki - Fandom
 url = https://megamitensei.fandom.com/wiki/Ren_Amamiya
+
+[comick.io]
+match = -190.0%%
+title = Chapter 16 (English) - Zhen Men Ren
+url = https://comick.io/comic/zhen-men-ren/NRAoK-chapter-16-en
 
