--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-12 22:44:44
+lastsearch = 2024-07-13 02:14:14
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -17,9 +17,9 @@ title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
 url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT20 001
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut20-001
+match = 57.7%%
+title = Bộ chăn ga gối SH_UC22 018
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
 
 [changagoidemsonghong.com]
 match = 38.7%%
@@ -32,9 +32,9 @@ title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
 url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
 
 [shopee.vn]
-match = -29.0%%
-title = Bộ chăn ga gối cotton 5 món khách sạn Nanomex chất liệu vải ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-cotton-5-món-khách-sạn-Nanomex-chất-liệu-vải-T200-đến-T400-đủ-kích-thước-i.906764929.23418215255
+match = -19.4%%
+title = Bộ chăn ga gối 5 món lụa Tencel 60s cao cấp size 2mx2m và ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-lụa-Tencel-60s-cao-cấp-size-2mx2m-và-2m2x2m-nhiều-hoạ-tiết-Mangata-Bedding-mềm-mịn-mát-êm-ái-i.341203005.21003950899
 
 [gonbedding.vn]
 match = 41.9%%
