--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-12 20:05:02
+lastsearch = 2024-07-13 02:09:51
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -133.3%%
-title = Sân nhà cung các hoạt động khác diễn ra tại
-url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -82,9 +82,9 @@ title = XEBEC Brush™ Wheel Type
 url = https://aulac-global.com.vn/san-pham/xebec-brush-wheel-type/
 
 [www.instagram.com]
-match = -93.3%%
-title = Vu Hoang My (@vuhoangmyofficial)
-url = https://www.instagram.com/vuhoangmyofficial/?hl=en
+match = -206.7%%
+title = Linh Doan (@linhdzoan) • Instagram photos and videos
+url = https://www.instagram.com/linhdzoan/
 
 [www.ministop.vn]
 match = -26.7%%
