--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-13 01:25:02
+lastsearch = 2024-07-13 02:11:43
 
 [demxanh.com]
 match = -9.1%%
@@ -37,9 +37,9 @@ title = Review chiếu trúc hạt đen
 url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [shopee.vn]
-match = 12.1%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [chieutrucxinh.weebly.com]
 match = -9.1%%
