--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-12 21:37:42
+lastsearch = 2024-07-13 02:17:09
 
 [www.bible.com]
-match = -94.1%%
-title = ISAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
+match = 5.9%%
+title = Matthew 20:22-28 NKJV
+url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -88.2%%
+title = Sam 1-50 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/sam-1-50/
 
 [www.biblegateway.com]
 match = -129.4%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -17.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,14 +47,14 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
-url = https://www.bibleref.com/Mark/2/Mark-2-22.html
+match = -23.5%%
+title = What does Matthew 20:22 mean?
+url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -141.2%%
-title = Cách Gấp Màn Chụp Tự Bung Đỉnh Vuông Cực Nhanh, Dễ ...
-url = https://www.youtube.com/watch?v=KLTM17ZrMag
+match = -217.6%%
+title = 2 Samuel 20:22-22:2- English Bible Study - Father Mina Dimitri
+url = https://www.youtube.com/watch?v=s0FkEP6cCY8
 
 [www.biblestudytools.com]
 match = -129.4%%
