CI images update

--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-13 02:14:34
+lastsearch = 2024-07-13 02:32:04
 
 [shopee.vn]
 match = -36.8%%
@@ -97,9 +97,9 @@ title = mẹo chơi tài xỉu trên điện thoại điện tử trực tuyến
 url = https://olympicenglish.vn/Poc/mẹo chơi tài xỉu trên điện thoại.shtm
 
 [m.facebook.com]
-match = -115.8%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2381175382262927/
+match = -52.6%%
+title = REVIEW HỒ TRÀM ✅ | 💋💘🌟 𝐑𝐄𝐒𝐎𝐑𝐓 𝐈𝐗𝐎𝐑𝐀 𝐇𝐎̂̀ ...
+url = https://m.facebook.com/groups/919140211791483/posts/2061036980935128/
 
 [www.facebook.com]
 match = -21.1%%
@@ -157,12 +157,22 @@ title = Chii tri ChuAn b] Thanh ph§n Dja di~m
 url = https://smartkiosk-binhtan.tphcm.gov.vn/Uploads/FileVanBan/2022/8/Lich Tuần thứ 22 (lịch dự kiến)_29154450029.pdf
 
 [dinhhoa.thainguyen.gov.vn]
-match = -121.1%%
-title = ubnd huyen dinh hoa cog hoa xa hoi chu nghia viet nam
-url = https://dinhhoa.thainguyen.gov.vn/documents/241342/1324808/20181004084650.pdf/0d15bb85-13a6-46aa-ab7d-1b7e6f184330
+match = -126.3%%
+title = Ttr do - Hanh phtic S6:306/BC-UBND Dinh Ma, ngay 26
+url = https://dinhhoa.thainguyen.gov.vn/documents/241342/1434584/20181129091210.pdf/8282d5ad-61c7-4abf-88fe-b4cfb011f369
 
 [vi.made-in-china.com]
 match = -131.6%%
 title = Tờ chiếu bán chạy tốt nhất cho trẻ em 3-6 tuổi có chứng chỉ ...
 url = https://vi.made-in-china.com/co_libenplay/product_Best-Sale-Slide-for-3-6-Years-Old-Children-with-TUV-Certificate-Le-Ht-117_rgrsysyug.html
+
+[thsonhoa.bentre.edu.vn]
+match = -36.8%%
+title = Văn Bản Điều hành Văn Bản Điều hành
+url = https://thsonhoa.bentre.edu.vn/en/trang-chu?p_auth=0JrGoQuy&p_p_id=Visit_counter_20_WAR_Visit_counter_20portlet&p_p_lifecycle=1&p_p_state=normal&p_p_mode=view&p_p_col_id=_118_INSTANCE_g2b1ghPcvgLH__column-1&p_p_col_pos=5&p_p_col_count=6&_Visit_counter_20_WAR_Visit_counter_20portlet_javax.portlet.action=CountVisit
+
+[zingnews.vn]
+match = -84.2%%
+title = rua mat - Tin tức tức online 24h về rửa mặt
+url = https://zingnews.vn/rửa-mặt-tin-tuc/trang22.html?type=2
 
