--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-13 01:43:07
+lastsearch = 2024-07-13 02:28:42
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -106.7%%
-title = Black Kingdom - D2 | Ho Chi Minh City
-url = https://www.facebook.com/blackkingdom.ngt/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 12 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
@@ -102,8 +102,8 @@ title = Korea Visa Application Center in Ha Noi
 url = https://visaforkorea-vt.com/
 
 [www.slideshare.net]
-match = -226.7%%
-title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết | PDF
+match = -186.7%%
+title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết
 url = https://www.slideshare.net/slideshow/50-thi-hc-sinh-gii-vt-l-12-c-p-n-chi-tit/239568317
 
 [diendan.hocmai.vn]
@@ -255,4 +255,9 @@ url = https://chuyentactical.com/den-pin/sac-pin-fenix-are-d2/
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
 url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
+
+[www.ministop.vn]
+match = -26.7%%
+title = Danh sách tất cả cửa hàng
+url = https://www.ministop.vn/ms/all
 
