--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-13 01:47:14
+lastsearch = 2024-07-13 02:27:46
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -141.2%%
-title = The HOA hates this man. : r/suspiciouslyspecific
-url = https://www.reddit.com/r/suspiciouslyspecific/comments/rn50gb/the_hoa_hates_this_man/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -176.5%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -147.1%%
-title = NEIGHBOR BUILT HOUSES ON MY LAND! HOA Karen Sold ...
-url = https://www.youtube.com/watch?v=LX-CzJVTKzk
+match = -170.6%%
+title = Identifying harassment in your HOA and what can be done ...
+url = https://www.youtube.com/watch?v=9QiKMQdcOMw
 
 [www.gsa.gov]
 match = -44.4%%
