--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-13 02:16:16
+lastsearch = 2024-07-13 02:24:58
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -895,4 +895,9 @@ url = https://californiacourtrecords.us/criminal-court-records/inmate/
 match = -166.7%%
 title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
+
+[www.ussoccer.com]
+match = -153.3%%
+title = U.S. Soccer Official Website | USWNT & USMNT
+url = https://www.ussoccer.com/
 
