--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-13 00:38:11
+lastsearch = 2024-07-13 02:26:17
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -14.3%%
+title = Son of the Mask (2005)
+url = https://www.imdb.com/title/tt0362165/
 
 [www.etsy.com]
 match = 35.7%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -7.1%%
+title = Blue Dog Coalition
+url = https://en.wikipedia.org/wiki/Blue_Dog_Coalition
 
 [www.yeastdriven.com]
 match = -114.3%%
