--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-13 01:39:17
+lastsearch = 2024-07-13 02:32:49
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -60.9%%
-title = Korean server Crowe is dead : r/TowerofFantasy
-url = https://www.reddit.com/r/TowerofFantasy/comments/x7z1kj/korean_server_crowe_is_dead/
+match = -73.9%%
+title = I get 90~ish ping playing on NA server in Korea.
+url = https://www.reddit.com/r/leagueoflegends/comments/2m3h6n/i_get_90ish_ping_playing_on_na_server_in_korea/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
