--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-13 01:53:16
+lastsearch = 2024-07-13 03:14:08
 
 [hanvico.net.vn]
 match = -42.1%%
@@ -57,9 +57,9 @@ title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
 url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
-match = -68.4%%
-title = Ruột gối đầu bông lông vũ nhân tạo Size 60x80 ...
-url = https://shopee.vn/Ruột-gối-đầu-bông-lông-vũ-nhân-tạo-Size-60x80-Ruột-gối-khách-sạn-cao-cấp(không-có-khoá-kéo)-i.297905470.8617161409
+match = -142.1%%
+title = Ruột gối lông vũ tự nhiên K-Sleep tiêu chuẩn khách sạn 5 ...
+url = https://shopee.vn/Ruột-gối-lông-vũ-tự-nhiên-K-Sleep-tiêu-chuẩn-khách-sạn-5-sao-i.724553710.18837419918
 
 [demgiare.net]
 match = 0.0%%
