--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-13 03:33:52
+lastsearch = 2024-07-13 04:34:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -106.7%%
-title = Black Kingdom - D2 | Ho Chi Minh City
-url = https://www.facebook.com/blackkingdom.ngt/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -112,9 +112,9 @@ title = Top 22 vitamin D3 K2 tăng chiều cao các mẹ tin dùng nên ...
 url = https://www.nhathuocankhang.com/ban-tin-suc-khoe/cac-loai-vitamin-d3-k2-tot-tren-thi-truong-1385972
 
 [nhanh.vn]
-match = -233.3%%
-title = 600+ điểm gửi hàng Lazada (LEX) tại tp Hồ Chí Minh (cập ...
-url = https://nhanh.vn/600-diem-gui-hang-lazada-lex-tai-tp-ho-chi-minh-cap-nhat-moi-nhat-co-chi-duong-n96295.html
+match = -240.0%%
+title = 19 điểm gửi hàng Shopee Express tại tp Hồ Chí Minh (cập ...
+url = https://nhanh.vn/19-diem-gui-hang-shopee-express-tai-tp-ho-chi-minh-cap-nhat-moi-nhat-co-chi-duong-n96256.html
 
 [visaforkorea-vt.com]
 match = -113.3%%
