--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-13 02:16:03
+lastsearch = 2024-07-13 04:30:29
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -123.5%%
 title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67rmIUQG&sig=ACfU3U0ujkc2g3nRPrDhX4g_ewCDzz1pag&hl=en&sa=X&ved=2ahUKEwj7opWvm6KHAxWsMlkFHY7ICn4Q6AF6BAgXEAM
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67rmQVMM&sig=ACfU3U2nnkQNmyMOWY4f5pn7g-fbR_loeQ&hl=en&sa=X&ved=2ahUKEwjNwp-1uaKHAxVqEVkFHcFQAiwQ6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
