--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-12 23:40:18
+lastsearch = 2024-07-13 04:30:17
 
 [www.lazada.vn]
 match = -61.1%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -166.7%%
-title = Tuyệt chiêu làm TAI HEO TRỘN THÍNH giòn ngon. Nem Thính ...
-url = https://www.youtube.com/watch?v=NyujRL0KfRw
+match = -161.1%%
+title = Bí quyết làm Nem nướng bằng chảo giòn dai, nước chấm ...
+url = https://www.youtube.com/watch?v=2aD54Ka5Reg
 
 [www.instagram.com]
 match = -172.2%%
