--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-13 00:19:32
+lastsearch = 2024-07-13 04:50:49
 
 [www.bible.com]
 match = -157.1%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -178.6%%
-title = Mùng chụp tự bung đỉnh chóp HOÀNG PHÁT - HỒNG TRƠN
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-chop-hoang-phat-hong-tron-loai-tot-.html
+match = -150.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [manthutrang.com]
 match = -207.1%%
