--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-13 04:53:03
+lastsearch = 2024-07-13 05:12:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đ
 url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -30.4%%
-title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
-url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
+match = -87.0%%
+title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = -4.3%%
-title = ĐƠN VỊ CUNG CẤP CHIẾU TRÚC CẦN THƠ
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/don-vi-cung-cap-chieu-truc-can-tho-50.html
+match = -21.4%%
+title = TIN TRONG NƯỚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
 
 [shopee.vn]
 match = -43.5%%
