--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-13 00:13:47
+lastsearch = 2024-07-13 05:16:02
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = 6.5%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -6.5%%
@@ -37,9 +37,9 @@ title = chiếu trúc hạt quế lâm hoa m5 [Được kiểm hàng] 29675422
 url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m5-duo-c-kie-m-ha-ng-29675422-116802908.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1715904000322_undefined_-1_cateLvl2_0_90_23_-1
 
 [www.lazada.vn]
-match = -3.2%%
-title = Chiếu Trúc Quế Lâm Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-que-lam/?innerlink=hot_v1
+match = 16.1%%
+title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
 
 [www.diepxuan.com]
 match = 100.0%%
