--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-07-12 23:38:30
+lastsearch = 2024-07-13 05:17:15
 
 [www.noithatpassion.com]
-match = -123.5%%
-title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ ...
+match = -129.4%%
+title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ Hồng
 url = https://www.noithatpassion.com/products/tham-phu-sofa-trang-tri-tho-cam-hoa-van-do-hong
 
 [www.intellect-worldwide.com]
